<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="grouphub.travelshare.ToolbarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/button_layout">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_folders"
            android:background="@drawable/custom_folders"
            android:layout_weight="0.35"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_camera"
            android:background="@drawable/custom_camera"
            android:layout_weight="0.35"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_manager"
            android:background="@drawable/custom_manager"
            android:layout_weight="0.15"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_views"
            android:background="@drawable/custom_views"
            android:layout_weight="0.15"
            />

    </LinearLayout>

</FrameLayout>
