<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edittext_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Invitee's email address"
        android:inputType="textEmailAddress"/>

</LinearLayout>