<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupFragment"
    android:id="@+id/groupFrag">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_creategroup"
        android:background="@drawable/group_name_bar"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:paddingBottom = "10dp"
        android:text = "Create Group"
        android:drawableBottom = "@drawable/group" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_inviteusertogroup"
        android:background = "@drawable/group_name_bar"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="20dp"
        android:paddingBottom="10dp"
        android:text="add member"
        android:drawableBottom="@drawable/add"/>

</FrameLayout>
