<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="grouphub.travelshare.HomepageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/group_name_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/group_name_bar_margins_left"
            android:layout_marginRight="@dimen/group_name_bar_margins_right">

            <TextView
                android:id="@+id/group_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Maldives! :D"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <ListView
            android:id="@+id/listview_pictures"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <!--<GridView-->
            <!--android:id="@+id/gridview_pictures"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:verticalSpacing="0dp"-->
            <!--android:horizontalSpacing="0dp"-->
            <!--android:numColumns="auto_fit">-->
        <!--</GridView>-->

    </LinearLayout>

</FrameLayout>
