<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/linearLayout">

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="Password"
        android:password="true" />



</LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up!"
        android:id="@+id/signupButton"
        android:layout_below="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />

    <Button
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:text="Login"
        android:layout_below="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_toLeftOf="@+id/signupButton"
        android:layout_toStartOf="@+id/signupButton" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="Email"
        android:layout_above="@+id/linearLayout"
        android:layout_alignRight="@+id/signupButton"
        android:layout_alignEnd="@+id/signupButton" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/signupButton"
        android:layout_centerHorizontal="true" />

</RelativeLayout>