<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="grouphub.travelshare.TopBarFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        android:background="@drawable/top_bar"
        android:layout_gravity="center_horizontal|top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TripPhoto"
            android:textColor="@color/colorPrimary"
            android:typeface="serif"
            android:textSize="30sp"
            android:layout_marginLeft="10dp"
            />

        <!-- Why prompt??? -->
        <!-- overlap anchor for api >= 21-->
        <Spinner
            android:id="@+id/dropdown_menu"
            android:background="@drawable/custom_setting"
            android:layout_width="@dimen/topbar_height"
            android:layout_height="@dimen/topbar_height"
            android:drawSelectorOnTop="true"
            android:overlapAnchor="false"
            android:prompt="@string/app_name"
            android:layout_marginRight="@dimen/spinner_margins"
            android:layout_marginEnd="@dimen/spinner_margins"
            android:layout_marginBottom="2dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

</FrameLayout>
