<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/emailSignUp"
            android:hint="Email"
            />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="Username"
            />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/passwordSignUp"
            android:hint="Password"
            android:password="true" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/confpasswordSignUp"
            android:hint="Confirm Password"
            android:password="true" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/signupButton"
            android:text="Sign Up!"/>
    </LinearLayout>

</RelativeLayout>